<resources>
    <string name="app_name">My Department</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_register"><u>No account? Register</u></string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_main">My Department</string>
    <string name="title_subjects">Subjects</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="choose_role">--choose role--</string>
    <string name="choose_group">--choose group--</string>
    <string name="logout">Logout</string>
    <string name="ac_header_role">Role:</string>
    <string name="ac_header_group">Group:</string>
    <string name="content_des_ic_profile">Profile Image</string>
    <string name="choose_role_teacher">Teacher</string>
    <string name="choose_role_student">Student</string>
    <string name="no_subjects_for_you">No subjects for you</string>
    <string name="recycler_item_teacher">Teacher:</string>
    <string name="no_sections">No sections</string>
    <string name="hint_message">Message</string>
    <string name="alert_connection_failed">Connection failed</string>
    <string name="alert_incorrect_login_or_password">Incorrect login or/and password</string>
    <string name="alert_fill_all_field">Fill all field</string>
    <string name="alert_check_field">Check all field on the correct</string>
    <string name="alert_wrong_password_length">Password length must be more than 9 characters and less than 31</string>
    <string name="toast_reg_success">Registration has been successfully</string>
    <string name="you_can_add_your_image">You can add your image</string>
    <string name="image_has_been_added">Image has been added</string>
    <string name="reply_to">Reply to:</string>
    <string name="title_section">Sections</string>
    <string name="title_comments">Comments</string>
    <string name="file_has_attached">File has attached</string>
    <string name="no_notifications">No notifications</string>
    <string name="viewed">Viewed</string>
    <string name="too_large_file">The file must be ≤ 10 mb</string>
    <string name="download_file">Download File</string>
    <string name="downloaded">Downloaded</string>
</resources>