<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_account">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.mydepartment.ui.account.AccountFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.example.mydepartment.ui.subjects.SubjectsFragments"
        android:label="@string/title_subjects"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mydepartment.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>