<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrationActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/TextInputLayoutAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/family_name_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_name"
                style="@style/TextInputAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/family_name_layout"
            style="@style/TextInputLayoutAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/group"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_surname"
                style="@style/TextInputAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/surname"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/ViewMarginAuthentication"
            app:layout_constraintBottom_toTopOf="@+id/layout_email"
            app:layout_constraintTop_toBottomOf="@+id/family_name_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/TextInputLayoutAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_password"
            app:layout_constraintTop_toBottomOf="@+id/group"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                style="@style/TextInputAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/TextInputLayoutAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/layout_add_avatar"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/TextInputAuthentication"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_add_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_password">

            <ImageView
                android:id="@+id/image_view_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sharp_attach_file_24" />

            <TextView
                android:id="@+id/text_view_state_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_can_add_your_image"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            style="@style/ButtonAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_add_avatar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
